--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "dependencies": {
-    "cypress": "^13.6.4"
+    "cypress": "^13.6.4",
+    "webpack": "^5.90.3"
   },
   "scripts": {
     "test-headless": "cypress run --headless --browser chrome",
     "test": "cypress run --browser chrome"
+    
   },
   "devDependencies": {
     "cypress-iframe": "^1.0.1"
